--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ html {
     font-size: 16px;
 }
 
+#content {
+    padding: 0.5rem;
+    margin: 1rem 0;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
 .payment-card-container {
     width: 70%;
     max-width: 650px;
@@ -66,10 +73,12 @@ html {
 
 .visa-card__cvv p {
     font-size: 1.2rem;
+    height: 23px;
 }
 
 .visa-card-number {
     width: 100%;
+    height: 75px;
     padding: 0.8rem 0 1rem 0;
 }
 
@@ -91,6 +100,7 @@ html {
 .visa-card__identity p {
     padding: 0.5rem 0;
     font-size: 1.4rem;
+    height: 43px;
 }
 
 /* form section */
