feat: display payment card type based on card number

--- a/style.css
+++ b/style.css
@@ -9,22 +9,19 @@
 html {
     font-size: 16px;
 }
-
+/* 
 #content {
     padding: 0.5rem;
     margin: 1rem 0;
     border: none;
     outline: none;
     cursor: pointer;
-}
+} */
 .payment-card-container {
     width: 70%;
     max-width: 650px;
     margin: 15rem auto 0 auto;
     position: relative;
-    /* top: 60%;
-    left: 60%;
-    transform: translate(-60%, -60%); */
 }
 
 .visa-card {
@@ -59,7 +56,6 @@ html {
 }
 
 .visa-text-logo img {
-    width: 60px;
     max-width: 100%;
     height: auto;
 }
