--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ html {
 }
 
 body {
+    /* background-color: hsl(52, 97%, 91%); */
+    background-color: hsl(43, 100%, 88%);
     position: relative;
 }
 
 .alert-message {
     visibility: hidden;
-    /* display: none; */
     background-color: white;
     border: 1px solid green;
     padding: 1rem 0;
@@ -42,7 +43,6 @@ body {
 
 .alert-message.active {
     visibility: visible;
-    /* display: block; */
     animation-name: paymentSuccess;
     animation-duration: 1.5s;
 }
@@ -50,12 +50,10 @@ body {
 @keyframes paymentSuccess {
     from {
         visibility: hidden;
-        /* display: none; */
         top: -40%;
     }
     to {
         visibility: visible;
-        /* display: block; */
         top: -35%;
     }
 }
@@ -68,8 +66,8 @@ body {
 }
 
 .visa-card {
-    border: 1px solid lightgrey;
-    background-color: white;
+    background-color: hsl(30, 64%, 63%);
+    color: white;
     width: 85%;
     padding: 1.5rem 0;
     margin: 0 auto;
@@ -92,10 +90,36 @@ body {
     align-items: center;
 }
 
-.visa-card__silver-mark {
-    border: 1px solid midnightblue;
-    border-radius: 7px;
+.visa-card__emv-chip {
+    background-color: gold;
+    border: 1px solid black;
+    border-radius: 10px;
     padding: 1.5rem 2.2rem;
+    position: relative;
+}
+
+.visa-card__emv-chip .design__horizontal-line {
+    border: 1px solid black;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    top: 22%;
+    right: 0;
+    border-left: none;
+    border-right: none;
+}
+
+.visa-card__emv-chip .design__vertical-line {
+    background-color: gold;
+    border: 1px solid black;
+    height: 100%;
+    width: 20px;
+    position: absolute;
+    top: 0;
+    left: 36%;
+    z-index: 10;
+    border-top: none;
+    border-bottom: none;
 }
 
 .visa-text-logo img {
@@ -104,7 +128,6 @@ body {
 }
 
 .visa-card__cvv {
-    width: 90%;
     margin: 0 auto;
     padding: 1.2rem 0 0.5rem 0;
     text-align: end;
@@ -145,12 +168,13 @@ body {
 /* form section */
 
 .form-section {
-    border: 1px solid black;
+    background-color: white;
     width: 95%;
     padding: 10rem 0 3rem 0;
     margin: 0 auto;
     border-radius: 15px;
     position: relative;
+    box-shadow: 0px 6px 16px -5px hsl(30, 64%, 63%);
 }
 
 .form__input-wrapper {
@@ -178,7 +202,8 @@ body {
 .form__input-wrapper input:focus,
 .form__input-wrapper select:focus {
     border: 1px solid transparent;
-    box-shadow: 0px 0px 5px 1px skyblue;
+    /* box-shadow: 0px 0px 5px 1px skyblue; */
+    box-shadow: 0px 0px 5px 1px gold;
 }
 
 .form__card-number {
@@ -236,7 +261,7 @@ body {
 }
 
 button {
-    background-color: rgb(14, 14, 134);
+    background-color: maroon;
     color: white;
     font-size: 1.2rem;
     font-weight: 900;
